# content-ai-tool

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.staging  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  new.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/common/application/: base_command.py  base_query.py  base_result.py  unit_of_work.py
app/common/config/: openapi_config.py  security_config.py  settings.py
app/common/domain/: aggregate_root.py  base_entity.py  domain_event.py  domain_service.py  value_objects.py
app/common/dto/: api_response.py
app/common/exception/: base_exception.py  global_exception_handler.py
app/common/middleware/: cors_middleware.py  request_logging_middleware.py
app/core/: exceptions.py  response.py
app/core/domain/: __init__.py
app/core/entities/: base_entity.py  value_objects.py
app/core/interfaces/: base_repository.py  base_use_case.py  llm_provider.py
app/core/utils/: logger.py
app/features/ad_copy/: __init__.py
app/features/article_writer/: __init__.py
app/features/auth/: __init__.py
app/features/blog_generator/: __init__.py
migrations/: env.py
migrations/versions/: b95b4af80510_add_5_feature_tables.py  d98cf516d6fc_initial_migrations.py
skill/: SKILL.md  implementation_plan.md.resolved  refactor_plan_v2.md
skill/workflows/: 01_setup.md  02_add_feature.md  03_run_local.md  05_testing.md  06_add_llm_chain.md  07_docker.md
(+357 files in other folders)
